Fix: <input> show black bg when clicked on iOS safari

--- a/npm/src/component/dialog/SearchDialog.scss
+++ b/npm/src/component/dialog/SearchDialog.scss
@@ -29,6 +29,10 @@
     @include textfield.focused-outline-color(var(--button-bg));
 }
 
+input {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .mdc-button.btn-search {
     @include button.ink-color(var(--chip-ink));
     @include button.container-fill-color(var(--chip-bg));
@@ -66,6 +70,7 @@
     text-align: justify;
     line-break: anywhere;
     line-height: 1rem;
+
     mark {
         background-color: transparent;
         color: var(--search-nav);
